--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint \"**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.0.1",
+    "@radix-ui/react-slot": "^1.0.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "classnames": "^2.3.2",
     "eslint": "^8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
